--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "mocha": "10.2.0",
     "prettier": "3.0.3",
     "ts-node": "~8.0.2",
-    "tslint": "~5.11.0",
+    "tslint": "6.1.3",
     "typescript": "4.8.4"
   },
   "main": "index.js",
