--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,7 @@
     "chai": "4.3.10",
     "mocha": "10.2.0",
     "prettier": "3.0.3",
-    "ts-node": "~8.0.2",
+    "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.8.4"
   },
