--- a/client/package.json
+++ b/client/package.json
@@ -221,7 +221,7 @@
   },
   "devDependencies": {
     "@types/node": "16.18.55",
-    "@types/vscode": "1.70.0",
+    "@types/vscode": "^1.82.0",
     "prettier": "3.0.3",
     "tslint": "6.1.3",
     "typescript": "5.2.2"
