migrate to recommended directory structure

--- a/client/package.json
+++ b/client/package.json
@@ -1,213 +1,9 @@
 {
-  "name": "rf-intellisense",
-  "displayName": "Robot Framework Intellisense",
-  "description": "Robot Framework Intellisense",
+  "private": true,
   "version": "2.8.0",
   "license": "MIT",
-  "publisher": "TomiTurtiainen",
-  "icon": "icon.png",
   "engines": {
     "vscode": "^1.70.0"
-  },
-  "categories": [
-    "Programming Languages",
-    "Other"
-  ],
-  "activationEvents": [
-    "onLanguage:robot"
-  ],
-  "galleryBanner": {
-    "theme": "dark",
-    "color": "#232d33"
-  },
-  "private": true,
-  "main": "./out/src/extension",
-  "contributes": {
-    "languages": [
-      {
-        "id": "robot",
-        "extensions": [
-          ".robot",
-          ".resource"
-        ],
-        "aliases": [
-          "Robot Framework",
-          "robotframework",
-          "RobotFramework"
-        ],
-        "configuration": "./robot-language-configuration.json"
-      }
-    ],
-    "grammars": [
-      {
-        "language": "robot",
-        "scopeName": "text.robot",
-        "path": "./syntaxes/robot.tmLanguage"
-      }
-    ],
-    "commands": [
-      {
-        "command": "rfIntellisense.rebuildSources",
-        "title": "RF Intellisense - Reindex robot files in the workspace"
-      },
-      {
-        "command": "rfIntellisense.reportBug",
-        "title": "RF Intellisense - Report a bug"
-      }
-    ],
-    "configuration": {
-      "type": "object",
-      "title": "Robot Framework language server configuration",
-      "properties": {
-        "rfLanguageServer.includePaths": {
-          "type": "array",
-          "default": [],
-          "description": "An array of files/folders that should be included by the parser. Glob patterns are accepted (eg. test/*.robot)",
-          "items": {
-            "type": "string"
-          }
-        },
-        "rfLanguageServer.excludePaths": {
-          "type": "array",
-          "default": [],
-          "description": "An array of files/folders that should be ignored by the parser. Glob patterns are accepted (eg. **/*bad.robot)",
-          "items": {
-            "type": "string"
-          }
-        },
-        "rfLanguageServer.pythonKeywords": {
-          "type": "boolean",
-          "default": false,
-          "description": "DEPRECATED. Use rfLanguageServer.includePaths instead"
-        },
-        "rfLanguageServer.libraries": {
-          "type": "array",
-          "default": [],
-          "description": "Libraries whose keywords are suggested with auto-complete",
-          "items": {
-            "oneOf": [
-              {
-                "type": "string",
-                "enum": [
-                  "BuiltIn-2.7.7",
-                  "BuiltIn-2.8.7",
-                  "BuiltIn-2.9.2",
-                  "BuiltIn-3.0.4",
-                  "BuiltIn-3.1.1",
-                  "Collections-2.7.7",
-                  "Collections-2.8.7",
-                  "Collections-2.9.2",
-                  "Collections-3.0.4",
-                  "Collections-3.1.1",
-                  "DateTime-2.8.7",
-                  "DateTime-2.9.2",
-                  "DateTime-3.0.4",
-                  "DateTime-3.1.1",
-                  "Dialogs-2.7.7",
-                  "Dialogs-2.8.7",
-                  "Dialogs-2.9.2",
-                  "Dialogs-3.0.4",
-                  "Dialogs-3.1.1",
-                  "OperatingSystem-2.7.7",
-                  "OperatingSystem-2.8.7",
-                  "OperatingSystem-2.9.2",
-                  "OperatingSystem-3.0.4",
-                  "OperatingSystem-3.1.1",
-                  "Process-2.8.7",
-                  "Process-2.9.2",
-                  "Process-3.0.4",
-                  "Process-3.1.1",
-                  "Screenshot-2.7.7",
-                  "Screenshot-2.8.7",
-                  "Screenshot-2.9.2",
-                  "Screenshot-3.0.4",
-                  "Screenshot-3.1.1",
-                  "Selenium2Library-1.8.0",
-                  "Selenium2Library-3.0.0",
-                  "SeleniumLibrary-3.2.0",
-                  "SeleniumLibrary-3.3.1",
-                  "String-2.7.7",
-                  "String-2.8.7",
-                  "String-2.9.2",
-                  "String-3.0.4",
-                  "String-3.1.1",
-                  "Telnet-2.7.7",
-                  "Telnet-2.8.7",
-                  "Telnet-2.9.2",
-                  "Telnet-3.0.4",
-                  "Telnet-3.1.1",
-                  "XML-2.8.7",
-                  "XML-2.9.2",
-                  "XML-3.0.4",
-                  "XML-3.1.1"
-                ]
-              },
-              {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "version": {
-                    "type": "string"
-                  },
-                  "keywords": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "name": {
-                          "type": "string"
-                        },
-                        "args": {
-                          "type": "array",
-                          "items": {
-                            "type": "string"
-                          }
-                        },
-                        "doc": {
-                          "type": "string"
-                        }
-                      },
-                      "required": [
-                        "name",
-                        "args"
-                      ]
-                    }
-                  }
-                },
-                "required": [
-                  "name",
-                  "version",
-                  "keywords"
-                ]
-              }
-            ]
-          }
-        },
-        "rfLanguageServer.logLevel": {
-          "type": "string",
-          "enum": [
-            "off",
-            "errors",
-            "info",
-            "debug"
-          ],
-          "default": "off",
-          "description": "What language server log messages are printed"
-        },
-        "rfLanguageServer.trace.server": {
-          "type": "string",
-          "enum": [
-            "off",
-            "messages",
-            "verbose"
-          ],
-          "default": "off",
-          "description": "Traces the communication between VSCode and the rfLanguageServer service."
-        }
-      }
-    }
   },
   "scripts": {
     "compile": "tsc -watch -p ./",
@@ -227,21 +23,11 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "vscode-languageclient": "~5.1.1"
+    "vscode-languageclient": "7.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/tomi/vscode-rf-language-server.git"
   },
-  "keywords": [
-    "RF",
-    "RobotFramework",
-    "intellisense",
-    "code-completion"
-  ],
-  "author": "Tomi Turtiainen <tomi.turtiainen@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/tomi/vscode-rf-language-server/issues"
-  },
-  "homepage": "https://github.com/tomi/vscode-rf-language-server#readme"
+  "author": "Tomi Turtiainen <tomi.turtiainen@gmail.com>"
 }
