--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,8 @@
 		"noImplicitThis": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
-		"outDir": "../client/server",
+		"outDir": "out",
+    "rootDir": "src",
 		"sourceMap": true,
 		"strictBindCallApply": true,
 		"strictFunctionTypes": true,
