--- a/package.json
+++ b/package.json
@@ -220,6 +220,9 @@
     "vscode:prepublish": "npm run compile",
     "build": "tsc -b",
     "watch": "tsc -b -w",
+    "clean": "npm run clean-client && npm run clean-server",
+    "clean-client": "cd client && npm run clean",
+    "clean-server": "cd server && npm run clean",
     "install": "npm run install-client && npm run install-server",
     "install-client": "cd client && npm ci",
     "install-server": "cd server && npm ci",
