--- a/library-docs/package.json
+++ b/library-docs/package.json
@@ -8,21 +8,21 @@
     "email": "tomi.turtiainen@gmail.com"
   },
   "engines": {
-    "node": "8"
+    "node": "16"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "node-fetch": "^2.2.0",
-    "ts-node": "~7.0.1",
-    "turndown": "^5.0.1",
-    "typescript": "3.1.3"
+    "cheerio": "1.0.0-rc.12",
+    "node-fetch": "2.7.0",
+    "ts-node": "10.9.1",
+    "turndown": "7.1.2",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.9",
-    "@types/node": "8.9.5",
-    "@types/node-fetch": "^2.1.2",
-    "prettier": "1.14.3",
-    "tslint": "^5.11.0"
+    "@types/cheerio": "0.22.32",
+    "@types/node": "16.18.55",
+    "@types/node-fetch": "2.6.6",
+    "prettier": "3.0.3",
+    "tslint": "6.1.3"
   },
   "main": "index.js",
   "scripts": {
